test/e2e/chainsaw/hybridgateway/basic-udproute/04-udpRoute-echo-second.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: UDPRoute
metadata:
  name: ($second_udp_route_name)
  namespace: ($udp_route_namespace)
  labels:
    chainsaw/test: ($test_name)
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ($gateway_name)
  rules:
    - backendRefs:
        - name: ($second_echo_deployment_name)
          port: 1026
